# ZenTerm-v2

./: .gitignore  Cargo.toml  LICENSE  LICENSE-BSD  LICENSE-MIT  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/ai-providers/: Cargo.toml
crates/ai-providers/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/core/: Cargo.toml
crates/core/examples/: event_bus_basic.rs
crates/core/src/: execution.rs  lib.rs  session.rs  task.rs
crates/core/src/event/: bus.rs  event.rs  key.rs  mod.rs  payload.rs  prelude.rs  subscription.rs
crates/core/tests/: event_bus_basic.rs
crates/plugins-api/: Cargo.toml
crates/plugins-api/src/: lib.rs
crates/plugins/git_helper/: Cargo.toml
crates/plugins/git_helper/src/: lib.rs
docs/: architecture.md
